--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,33 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+
+title = "Migrating WordPress to Hugo: Course Reference"
+theme = "kraiklyn"
+
+pygmentsCodeFences = true
+pygmentsStyle = "monokailight"
+
+[params]
+externalTitle = "Helpful Links"
+sidebarColor = "default"
+customCss = []
+
+[[menu.shortcuts]]
+name = "wp2hugo-ref on GitHub"
+url = "https://github.com/tygerbytes/wp2hugo-ref"
+weight = 10
+
+[[menu.shortcuts]]
+name = "Hugo docs"
+url = "https://gohugo.io/documentation/"
+weight = 20
+
+[[menu.shortcuts]]
+name = "@tygertec"
+url = "https://twitter.com/tygertec"
+weight = 10
+
+[[menu.shortcuts]]
+name = "tygertec.com"
+url = "https://tygertec.com"
+weight = 10
