--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://tygerbytes.github.io/wp2hugoref/"
 languageCode = "en-us"
 publishDir = "docs"
 
